MDEV-4823: Server crashes in Item_func_not::fix_fields on creating a table with a virtual column using NOT

fix_field() call protocol was brocken (zero pointer passed as link to item which is possible only if you are sure that there can not be Items which transforms).